Extra Knowledge section is added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="menu_home">Home</string>
     <string name="web_development">Web Development</string>
     <string name="menu_slideshow">Microsoft Tech</string>
-    <string name="menu_tools">Tools</string>
+    <string name="menu_tools">Extra Knowledge</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
 
